# widgets

./: .gitignore  CMakeLists.txt
include/: Button.h  Callback.hpp  Clickable.hpp  Gui.hpp  GuiException.hpp  Picture.h  Widget.h
src/: Button.cpp  Gui.cpp  Picture.cpp  Widget.cpp  main.cpp
